--- a/app/src/main/res/layout/activity_profil_view.xml
+++ b/app/src/main/res/layout/activity_profil_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -141,6 +141,16 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="18sp"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/btn_exit"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/button"
+            android:text="Logout"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
